--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
     <h1>My TodoList</h1>
@@ -13,6 +17,7 @@
         <button class="addbutton">Add Todo</button>
       </form>
     </div>
+    <hr class = "">
     <ol id="mylist"></ol>
     <script src="./scripts/main.js"></script>
     <!-- <script src="./scripts/jas.js"></script> -->
